--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.5.0",
     "i18n": "^0.15.1",
     "i18n-express": "^1.1.3",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "nestjs-i18n": "^10.5.1",
     "passport-jwt": "^4.0.1",
@@ -51,6 +52,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.46",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
