--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "dotenv": "^16.5.0",
     "i18n": "^0.15.1",
     "i18n-express": "^1.1.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "nest-winston": "^1.10.2",
     "nestjs-i18n": "^10.5.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -52,6 +55,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.2",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.46",
     "@types/passport-jwt": "^4.0.1",
