--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
+    "@fastify/csrf-protection": "^7.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -34,12 +35,15 @@
     "@nestjs/platform-express": "^10.4.17",
     "@nestjs/platform-socket.io": "^10.4.17",
     "@nestjs/schedule": "^6.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.4.17",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
+    "helmet": "^8.1.0",
     "i18n": "^0.15.1",
     "i18n-express": "^1.1.3",
     "moment-timezone": "^0.5.48",
